--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </h1>
 
     <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View
-            Menu</button></a>
+            Menu <img src="./assets/viewMenuArr.png" style="padding-bottom: 10px; padding-left: 4px;" alt=""></button></a>
 
     <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
         <div class="row disappearJ">
@@ -129,8 +129,8 @@
 
                 <div class="row" style="padding-top: 75px;">
                     <a class="centerJ" style="text-decoration: none;" href="./pages/ContactUs.html">
-                        <button class="btn btn-primary sansCollectionJ" style="width: 270px; height: 100px">Learn
-                            More</button>
+                        <button class="btn btn-primary sansCollectionJ viewMenuBtnJ">Learn
+                            More <img src="./assets/learnMoreArr.png" style="padding-left: 2px; padding-bottom: 8px;" alt=""></button>
                     </a>
                 </div>
 
@@ -173,7 +173,7 @@
                     you won’t regret it!. Down below are our top 5 popular sandwiches.</p>
             </div>
         </div>
-        <div class="row evenJ homePageMargin disappearJ">
+        <div class="row evenJ homePageMargin disappearJ" style="margin-top: 75px;">
             <div class="col centerJ">
                 <div class="card cardJ">
                     <img class="img-fluid" src="./assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
@@ -210,7 +210,7 @@
                 <div class="card cardJ">
                     <img class="img-fluid" src="./assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">Top Seller <span
+                        <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span
                                 class="sandwichJ">BBQ Pork</span> $5.79</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="Picture of star">
@@ -226,8 +226,11 @@
                 <div class="card cardJ">
                     <img class="img-fluid" src="./assets/banhMiCard4.png" class="card-img-top" alt="Picture of Ham and Cheese Croissant">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Croissant <span
-                                class="sandwichJ">H & C Croissant</span> $6.49</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
+                        <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Croissant</p>
+                        <p class="card-text sansCollectionJ sandwichJ2">$6.49</p>
+
+
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                             <img class="star2J" src="./assets/Star.png" alt="Picture of star">
@@ -242,8 +245,9 @@
                 <div class="card cardJ ">
                     <img class="img-fluid" src="./assets/banhMiCard5.png" class="card-img-top" alt="Picture of Ham and Cheese Baguette">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Baguette <span
-                                class="sandwichJ">H & C Baguette</span> $6.19</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Baguette</p>
+                        <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">H & C Baguette</p>
+                        <p class="card-text sansCollectionJ sandwichJ2">$6.19</p>
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="Picture of star">
                             <img class="star2J" src="./assets/Star.png" alt="Picture of star">
@@ -255,8 +259,8 @@
                 </div>
             </div>
         </div>
-        <div class="row centerJ my-4">
-            <button class="btn btn-primary" style="width: 250px;">View Sandwiches</button>
+        <div class="row centerJ my-4" style="padding-top: 50px; padding-bottom: 90px;">
+            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn">View Sandwiches <img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 25px; padding-bottom: 2px;"></button>
         </div>
         <div class="row homePageMargin disappearJ">
             <div class="col">
@@ -278,10 +282,10 @@
                     options.</p>
             </div>
         </div>
-        <div class="row evenJ homePageMargin disappearJ">
+        <div class="row evenJ homePageMargin disappearJ" style="margin-top: 75px;">
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard1.png" class="card-img-top imgHeightJ" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 taroTxtJ">#1 Favorite <span
                                 class="sandwichJ">Tangy Taro</span> $5.89</p>
@@ -297,7 +301,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard2.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard2.png" class="card-img-top imgHeightJ" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">"The Go To Drink" <span
                                 class="sandwichJ">Green Tea Gangbusters</span> $5.89</p>
@@ -313,7 +317,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard3.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard3.png" class="card-img-top imgHeightJ" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 thaiTeaTxtJ">Top Seller <span
                                 class="sandwichJ">Iced Thai Tea</span> $5.69</p>
@@ -329,7 +333,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ" >
-                    <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard4.png" class="card-img-top imgHeightJ" alt="...">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 avocadoTxtJ">#1 Recommended <span
                                 class="sandwichJ">Appealing Avocado</span> $5.89</p>
@@ -345,10 +349,13 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard5.png" class="card-img-top imgHeightJ" alt="...">
                     <div class="card-body">
-                        <p class="card-text sansCollectionJ sandwichJ2 greenTeaTxtJ">#2 Recommended <span
-                                class="sandwichJ"> HoneyDew Milk Tea</span> $5.69</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#2 Recommended</p>
+                        <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">HoneyDew</p>
+                        <p class="card-text sansCollectionJ sandwichJ croissantTxtJ croissantMarginJ">Milk Tea</p>
+                        <p class="card-text sansCollectionJ sandwichJ2">$5.69</p>
+
                         <div class="row starRowJ">
                             <img class="star2J" src="./assets/Star.png" alt="">
                             <img class="star2J" src="./assets/Star.png" alt="">
@@ -360,17 +367,17 @@
                 </div>
             </div>
         </div>
-        <div class="row centerJ my-4">
-            <button class="btn btn-primary" style="width: 250px;">View Drinks</button>
+        <div class="row centerJ" style="padding-top: 40px; padding-bottom: 75px;">
+            <button class="btn btn-primary sansCollectionJ viewSandwichesBtn">View Drinks<img src="./assets/viewSandwichesArr.png" alt="" style="padding-left: 30px; padding-bottom: 2px;"></button>
         </div>
         <div class="container-fluid reviewPaddingJ disappearJ">
             <div id="carouselExample" class="carousel slide bgWhiteJ">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row centerJ">
+                    <div class="carousel-item active" style="padding-top: 70px; padding-bottom: 40px;">
+                        <div class="row centerJ" >
                             <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="">
                         </div>
-                        <div class="row centerJ">
+                        <div class="row centerJ" style="padding-top: 15px; padding-bottom: 15px;">
                             <img class="starJ" src="./assets/Star.png" alt="">
                             <img class="starJ" src="./assets/Star.png" alt="">
                             <img class="starJ" src="./assets/Star.png" alt="">
@@ -378,7 +385,7 @@
                             <img class="starJ" src="./assets/Star.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">
+                            <p class="txtCenterJ sansCollectionJ lineHeight30" style="padding-left: 350px; padding-right: 350px;">
                                 The BEST place to get banh mi and smoothies in Stockton. Their sandwiches are smaller
                                 compared to other restaurants but are packed with sooo much flavor. I usually go for the
                                 #3 grilled pork and maybe an occasional almond/avocado smoothie. Their boba is better
@@ -392,10 +399,10 @@
                             <img class="quotesJ" src="./assets/Quotes.png" alt="">
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">Tina T</p>
+                            <p class="txtCenterJ croissantMarginJ" style="font-size: 20px; font-weight: 600;">Tina T</p>
                         </div>
                         <div class="row">
-                            <p class="txtCenterJ">Customer</p>
+                            <p class="txtCenterJ" style="font-size: 15px; opacity: 66%;">Customer</p>
                         </div>
                         <div class="row centerJ">
                             <img class="dotsJ" src="./assets/DotOutline.png" alt="">
