--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<!-- NavBar -->
+  <!-- NavBar -->
   <div class="container-fluid">
     <div class="row">
       <nav class="navbar navbar-expand-lg">
@@ -72,7 +72,7 @@
 
   <div class="container-fluid pageMargin">
 
-<!-- Top Five -->
+    <!-- Top Five -->
     <div class="row">
       <div class="headBox">
         <p>Top Sellers</p>
@@ -164,7 +164,8 @@
     </div>
     <div class="row d-sm-block d-md-none">
       <div class="col g-0">
-        <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;" alt="Banh mi/sandwich">
+        <img src="../assssssssssssssssssssssssets/mobileSand.jpg" style="width: 100%; height: 100%;"
+          alt="Banh mi/sandwich">
       </div>
     </div>
     <div class="row">
@@ -176,7 +177,7 @@
 
 
 
-<!-- Drinks Menu -->
+    <!-- Drinks Menu -->
     <div class="row">
       <div class="col g-0">
         <div class="line"></div>
@@ -287,132 +288,142 @@
       <div class="col drinkPos g-0 d-none d-lg-block">
         <div style="padding-top: 76px;">
           <img class="menuImage" src="../assssssssssssssssssssssssets/drink5.png"
-            style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;" alt="Strawberry slush">
+            style="float: right;width:652px;height:532px; object-fit: cover; object-position: 0px -210px ;"
+            alt="Strawberry slush">
         </div>
       </div>
     </div>
 
-<!-- Yelp Review -->
+    <!-- Yelp Review -->
 
-
-    <div id="carouselExample" class="carousel slide bgWhite d-none d-lg-block">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.png" alt="Customer profile picture">
+    <div class="row">
+      <div class="col g-0 d-none d-lg-block">
+        <div id="carouselExample" class="carousel slide bgWhite d-none d-lg-block">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row centerJ">
+                <img class="reviewImgT" src="../assssssssssssssssssssssssets/review1.png"
+                  alt="Customer profile picture">
+              </div>
+              <div class="row centerJ">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+              </div>
+              <div class="row">
+                <p class="reviewText">
+                  I never knew that finding a good boba drink would be a difficult thing until I found a bad one. This
+                  one
+                  though, restored the hope lol. On a serious note, their tapioca is amazing. I've been here about 3-4
+                  times
+                  and I always order the honeydew with tapioca. Simply delicious!
+                </p>
+              </div>
+              <div class="row centerJ">
+                <img class="quotesJ" style="margin-top: 36px;" src="../assets/Quotes.png" alt="Quotation marks">
+              </div>
+              <div class="row">
+                <div class="txtCenterJ">Nely L.</div>
+              </div>
+              <div class="row">
+                <p class="txtCenterJ">Customer</p>
+              </div>
+              <div class="row centerJ">
+                <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
+                <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+                <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row centerJ">
+                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review2.png"
+                  alt="Customer profile picture">
+              </div>
+              <div class="row centerJ">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+              </div>
+              <div class="row" style="height: 130px;">
+                <p class="reviewText">
+                  If you are searching for the best avocado boba drink in the world than search no more. This little
+                  sandwich & smoothie shop makes the perfect blend of ice, milk, sweetness, and real avocado. I have
+                  tried
+                  many other shops that have an avocado boba drink and they never live up to the deliciousness at 'Best
+                  Sandwiches & Smoothies'. For a few bucks you will taste heaven on earth. If you haven't tried this
+                  spot
+                  than you are just simply missing out! 5 stars and well deserved.
+                </p>
+              </div>
+              <div class="row centerJ">
+                <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
+              </div>
+              <div class="row">
+                <div class="txtCenterJ">Jeremy B.</div>
+              </div>
+              <div class="row">
+                <p class="txtCenterJ">Customer</p>
+              </div>
+              <div class="row centerJ">
+                <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
+                <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+                <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row centerJ">
+                <img class="reviewImgT" src="../assssssssssssssssssssssssets/review3.png"
+                  alt="Customer profile picture">
+              </div>
+              <div class="row centerJ">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+                <img class="starImg" src="../assets/Star.png" alt="picture of star">
+              </div>
+              <div class="row">
+                <p class="reviewText">
+                  I love coming here! Everything is sooooo yummy! Smoothies are on point! Especially the Thai tea, my
+                  favorite ! I've been coming here for years with my family & now my boyfriend as well.
+                </p>
+              </div>
+              <div class="row centerJ">
+                <img class="quotesJ" style="margin-top: 36px;" src="../assets/Quotes.png" alt="Quotation marks">
+              </div>
+              <div class="row">
+                <div class="txtCenterJ">Arianna P.</div>
+              </div>
+              <div class="row">
+                <p class="txtCenterJ">Customer</p>
+              </div>
+              <div class="row centerJ">
+                <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
+                <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+                <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
+              </div>
+            </div>
           </div>
-          <div class="row centerJ">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">
-              I never knew that finding a good boba drink would be a difficult thing until I found a bad one. This one
-              though, restored the hope lol. On a serious note, their tapioca is amazing. I've been here about 3-4 times
-              and I always order the honeydew with tapioca. Simply delicious!
-
-            </p>
-          </div>
-          <div class="row centerJ">
-            <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">Nely L.</p>
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">Customer</p>
-          </div>
-          <div class="row centerJ">
-            <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/Review2.png" alt="Customer profile picture">
-          </div>
-          <div class="row centerJ">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">
-              If you are searching for the best avocado boba drink in the world than search no more. This little
-              sandwich & smoothie shop makes the perfect blend of ice, milk, sweetness, and real avocado. I have tried
-              many other shops that have an avocado boba drink and they never live up to the deliciousness at 'Best
-              Sandwiches & Smoothies'. For a few bucks you will taste heaven on earth. If you haven't tried this spot
-              than you are just simply missing out! 5 stars and well deserved.
-            </p>
-          </div>
-          <div class="row centerJ">
-            <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">Jeremy B.</p>
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">Customer</p>
-          </div>
-          <div class="row centerJ">
-            <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row centerJ">
-            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review3.png" alt="Customer profile picture">
-          </div>
-          <div class="row centerJ">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-            <img class="starJ" src="../assets/Star.png" alt="picture of star">
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">
-              I love coming here! Everything is sooooo yummy! Smoothies are on point! Especially the Thai tea, my
-              favorite ! I've been coming here for years with my family & now my boyfriend as well.
-            </p>
-          </div>
-          <div class="row centerJ">
-            <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation marks">
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">Arianna P.</p>
-          </div>
-          <div class="row">
-            <p class="txtCenterJ">Customer</p>
-          </div>
-          <div class="row centerJ">
-            <img class="dotsJ" src="../assets/DotOutline.png" alt="page dot">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
-            <img class="dotsJ" src="../assets/Dot No fill.png" alt="page dot">
-          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
   </div>
 
 
 
-<!-- Footer -->
+  <!-- Footer -->
 
   <hr class="yellowJ hrLineJ hrMargin">
 
