--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -89,7 +89,7 @@
 
         <div class="d-none d-lg-block">
             <div class="row disappearJ bgWhite">
-                <div class="col topFive">
+                <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
                         <div class="card-body">
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col topFive">
+                <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
                         <div class="card-body">
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col topFive">
+                <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                         <div class="card-body">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col topFive">
+                <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard4.png" class="card-img-top"
                             alt="Picture of Ham and Cheese Croissant">
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col topFive">
+                <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
                         <img src="../assets/banhMiCard5.png" class="card-img-top"
                             alt="Picture of Ham and Cheese Baguette">
@@ -269,55 +269,55 @@
 
         <!-- Yelp Review -->
         <div class="row">
-            <div class="col g-0 d-none d-lg-block">
+            <div class="col g-0 d-none d-lg-block" style="margin-top: 30px;">
                 <div id="carouselExample" class="carousel slide bgWhiteJ">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row centerJ">
-                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="Customer Profile Picture">
+                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review4.png" alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
                             </div>
                             <div class="row">
-                                <p class="txtCenterJ">
+                                <p class="reviewText">
                                     Perfect Vietnamese sandwich, super affordable and really tasty. meat is always tasty
                                     and
                                     soft and the baguette is nice and fresh. worth checking out.
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" src="./assets/Quotes.png" alt="Quotation Marks">
+                                <img class="quotesJ" style="margin-top: 32px;" src="../assets/Quotes.png" alt="Quotation Marks">
                             </div>
                             <div class="row">
-                                <p class="txtCenterJ">Evelyn D.</p>
+                                <div class="txtCenterJ">Evelyn D.</div>
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">Customer</p>
                             </div>
                             <div class="row centerJ">
-                                <img class="dotsJ" src="./assets/DotOutline.png" alt="Page dot">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/DotOutline.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/Dot No fill.png" alt="Page dot">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row centerJ">
-                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="Customer Profile Picture">
+                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/review5.png" alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
                             </div>
                             <div class="row">
-                                <p class="txtCenterJ">
+                                <div class="reviewText">
                                     Their sandwiches are literally the BEST in Stockton! I live in San Jose and it beats
                                     san
                                     Jose banh mi too. Their bread is toasted warm when you order so make sure you enjoy
@@ -328,36 +328,36 @@
                                     smoothie!
                                     This taste super refreshing and healthy. Their service is okay, the owners are never
                                     friendly but the food is what keeps me coming back.
-                                </p>
+                                </div>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" src="./assets/Quotes.png" alt="Quotation Marks">
+                                <img class="quotesJ" src="../assets/Quotes.png" alt="Quotation Marks">
                             </div>
                             <div class="row">
-                                <p class="txtCenterJ">Vy N.</p>
+                                <div class="txtCenterJ">Vy N.</div>
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">Customer</p>
                             </div>
                             <div class="row centerJ">
-                                <img class="dotsJ" src="./assets/DotOutline.png" alt="Page dot">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/DotOutline.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/Dot No fill.png" alt="Page dot">
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row centerJ">
-                                <img class="reviewImgJ" src="./assets/Ellipse 1.png" alt="Customer Profile Picture">
+                                <img class="reviewImgT" src="../assssssssssssssssssssssssets/Review6.png" alt="Customer Profile Picture">
                             </div>
                             <div class="row centerJ">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
-                                <img class="starJ" src="./assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
+                                <img class="starImg" src="../assets/Star.png" alt="Picture of Star">
                             </div>
                             <div class="row">
-                                <p class="txtCenterJ">
+                                <p class="reviewText">
                                     I loved this place. I had the #1 Combo and the #4. They were both very tasty.You can
                                     taste the freshness of the ingredients. The meat was tender and flavorful.The
                                     veggies
@@ -365,18 +365,18 @@
                                 </p>
                             </div>
                             <div class="row centerJ">
-                                <img class="quotesJ" src="./assets/Quotes.png" alt="Quotation Marks">
+                                <img class="quotesJ"  style="margin-top: 32px;" src="../assets/Quotes.png" alt="Quotation Marks">
                             </div>
                             <div class="row">
-                                <p class="txtCenterJ">Dee M.</p>
+                                <div class="txtCenterJ">Dee M.</div>
                             </div>
                             <div class="row">
                                 <p class="txtCenterJ">Customer</p>
                             </div>
                             <div class="row centerJ">
-                                <img class="dotsJ" src="./assets/DotOutline.png" alt="Page dot">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
-                                <img class="dotsJ" src="./assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/DotOutline.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/Dot No fill.png" alt="Page dot">
+                                <img class="dotsJ" src="../assets/Dot No fill.png" alt="Page dot">
                             </div>
                         </div>
                     </div>
